--- a/style.css
+++ b/style.css
@@ -409,10 +409,15 @@ body {
 .wrapper {
   text-align: center;
   margin: 1rem;
-  width: 343px;
+  /* width: 343px; */
+  max-width: 1118px;
 }
 
 .fas {
+  color: #9C27B0;
+}
+
+.purple {
   color: #9C27B0;
 }
 
@@ -421,9 +426,18 @@ body {
   width: 103px;
   height: auto;
 }
+@media (min-width: 800px) {
+  .logo {
+    width: 159px;
+    height: auto;
+  }
+}
 
 .hamburger-icon {
   float: right;
+}
+@media (min-width: 800px) {
+  .hamburger-icon{display: none};
 }
 
 .heading {
@@ -450,6 +464,79 @@ body {
 
 .company__info {
   display: none;
+  position: relative;
+}
+@media (min-width: 800px) {
+  .company__info {
+    display: block;
+    float: right;
+    /* margin: 0; */
+    width: max-content;
+    height: 100px;
+  }
+}
+
+.company__info::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.company__info__phone, .company__info__email {
+  width: max-content;
+  display: inline;
+  margin: 0;
+  margin-right: 1rem;
+  font-size: .9rem;
+  color: #6C6C6C;
+}
+
+.locationFinder {
+  display: inline-flex;
+}
+
+
+.locationFinder__text {
+  background-color: #9C27B0;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 5px;
+  padding-left: .5rem;
+}
+
+.location__icon {
+  color: #fff;
+  background: #664967;
+  padding: .5rem;
+}
+
+nav {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+
+nav>ul {
+  list-style: none;
+  float: right;
+  margin-bottom: 0;
+}
+
+nav>ul>li {
+  float: left;
+  color: #6C6C6C;
+  margin-right: 1.2rem;
+  font-size: 1.5rem;
+}
+
+nav>ul>li:last-child {
+  margin-right: 0;
+}
+
+.locationFinder__text {
+  display: inline;
+  margin: 0;
 }
 
 .header::after {
@@ -458,17 +545,45 @@ body {
   clear: both;
 }
 
+.overlay-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  
+}
+
 .hero {
+  display: block;
   margin-top: 3.75rem;
   margin-bottom: 3.375rem;
 }
+@media (min-width: 800px) {
+  .hero {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 5.625rem;
+  }
+}
+
 
 .hero_text__heading {
   width: 290px;
 }
+@media (min-width: 800px) {
+  .hero_text__heading {
+    font-size: 2.25rem;
+    width: 26.25rem;
+  }
+}
 
 .hero_text__paragraph {
   width: 20.4375rem;
+}
+@media (min-width: 800px) {
+  .hero_text__paragraph {
+    font-size: 1.125rem;
+    width: 20.0625rem;
+  }
 }
 
 .hero__btn {
@@ -494,21 +609,75 @@ body {
 }
 
 .hero_text {
+  align-self: center;
   margin-bottom: 6.125rem;
 }
 
 .hero__image {
-  width: 20.375rem;
-  height: auto;
   border-radius: 5px;
+}
+@media (max-width: 800px) {
+  .hero__image {
+    width: 20.375rem;
+    height: auto;
+    margin-right: 2.5rem;
+  }
+}
+@media (min-width: 800px) {
+  .hero__image {
+    margin-right: 3rem;
+  }
+}
+
+/* @media (min-width: 800px) {
+  .hero__image {
+    width: 600px;
+    height: auto;
+  }
+} */
+
+.about {
+  margin-bottom: 2.875rem;
 }
 
 .about__heading {
   width: 20rem;
 }
+@media (min-width: 670px) {
+  .about__heading {
+    width: 40.4375rem;
+    font-size: 2rem;
+  }
+}
+@media (min-width: 800px) {
+  .about__heading {
+    width: 47.4375rem;
+    font-size: 2.25rem;
+  }
+}
+
+
+.about__paragraph {
+  font-size: 1.125rem;
+  max-width: 20.4rem;
+}
+@media (min-width: 670px) {
+  .about__paragraph {
+    max-width: 40.4375rem;
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 800px) {
+  .about__paragraph {
+    max-width: 47.4375rem;
+    font-size: 1.5rem;
+  }
+}
 
 .about__bullets {
   margin-top: 3.8125rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .about__bullet {
@@ -540,19 +709,42 @@ body {
   margin-top: 0;
 }
 
-.services {
+.services__container {
   margin-bottom: 3.375rem;
 }
 
+@media (min-width: 800px) {
+  .services__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 6rem;
+  }
+  .services__heading {
+    text-align: left;
+    font-size: 2.25rem;
+  }
+}
+
 .services__img {
-  width: 20.375rem;
+  width: 80%;
   height: auto;
   border-radius: 5px;
 }
 
 .services__point {
-  font-size: 1.2rem;
   text-align: left;
+}
+@media (max-width: 800px) {
+  .services__point {
+    font-size: 1.2rem;
+    max-width: 350px;
+  }
+}
+@media (min-width: 800px) {
+  .services__point {
+    font-size: 1.5rem;
+    max-width: 460px;
+  }
 }
 
 .services_list {
@@ -560,25 +752,39 @@ body {
 }
 
 .testimonials {
-  margin-bottom: 6rem;
+  margin-bottom: 5rem;
+}
+
+@media (min-width: 800px) {
+  .testimonials__heading {
+    font-size: 2.25rem;
+  }
+  .testimonial__container { 
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(370px, 1fr) );
+    justify-items: center;
+  }
 }
 
 .testimonial {
+  padding-left: 10px;
+  border-left: 3px solid #94cbfb;
   position: relative;
   padding-top: 1.875rem;
   margin-top: 1.25rem;
+  max-width: 370px;
   margin-bottom: 3rem;
 }
 
 .testimonial__icon {
   text-align: left;
   top: 0;
-  left: 0;
+  left: 10px;
   position: absolute;
 }
 
 .testimonial__paragraph {
-  margin-top: 0;
+  margin-top: 10px;
   text-align: left;
 }
 
@@ -598,6 +804,13 @@ body {
   padding: 1.5rem;
   border-radius: 5px;
   box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.25);
+}
+@media (min-width: 800px) {
+  .form-card {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .form-card__heading {
