--- a/style.css
+++ b/style.css
@@ -447,6 +447,7 @@ a {
   }
 }
 
+
 .hamburger-icon {
   float: right;
 }
@@ -565,6 +566,21 @@ nav>ul>li:last-child {
   display: table;
   clear: both;
 }
+@media (max-width: 350px) {
+  .header {
+    transform: scale(0.9)
+  }
+}
+@media (max-width: 800px) {
+  .header {
+    padding: 0 1em;
+  }
+}
+@media (min-width: 800px) {
+  .header {
+    background: linear-gradient(90deg, rgba(255,255,255,1) 19%, rgba(249,238,251,1) 100%);
+  }
+}
 
 .overlay-image {
   position: absolute;
@@ -577,6 +593,11 @@ nav>ul>li:last-child {
   display: block;
   margin-top: 3.75rem;
   margin-bottom: 3.375rem;
+}
+@media (max-width: 350px) {
+  .hero {
+    transform: scale(0.9)
+  }
 }
 @media (min-width: 800px) {
   .hero {
@@ -672,12 +693,12 @@ nav>ul>li:last-child {
   .hero__image {
     width: 20.375rem;
     height: auto;
-    margin-right: 2.5rem;
+    margin-right: auto;
   }
 }
 @media (min-width: 800px) {
   .hero__image {
-    margin-right: 3rem;
+    margin-right: 2rem;
   }
 }
 
@@ -692,6 +713,11 @@ nav>ul>li:last-child {
   background-color: #f9eefb;
   padding-top: 3rem;
   margin-bottom: 6rem;
+}
+@media (max-width: 350px) {
+  .about {
+    transform: scale(0.9)
+  }
 }
 
 .about__heading {
@@ -776,6 +802,11 @@ nav>ul>li:last-child {
   margin-bottom: 3.375rem;
   padding-top: 3rem;
 }
+@media (max-width: 350px) {
+  .services__container {
+    transform: scale(0.9)
+  }
+}
 
 @media (min-width: 800px) {
   .services__container {
@@ -824,6 +855,11 @@ nav>ul>li:last-child {
   margin-bottom: 5rem;
   margin-bottom: 5rem;
 }
+@media (max-width: 350px) {
+  .testimonials {
+    transform: scale(0.9)
+  }
+}
 
 @media (min-width: 800px) {
   .testimonials__heading {
@@ -869,6 +905,11 @@ nav>ul>li:last-child {
 
 .forms {
   margin-bottom: 4rem;
+}
+@media (max-width: 350px) {
+  .forms {
+    transform: scale(0.9)
+  }
 }
 
 .form__heading {
