--- a/style.css
+++ b/style.css
@@ -450,9 +450,55 @@ a {
 
 .hamburger-icon {
   float: right;
+  position: relative;
+  width: 28px;
+  height: 28px;
 }
 @media (min-width: 800px) {
   .hamburger-icon{display: none};
+}
+.hamburger-icon:before {
+  content: "";
+  position: absolute;
+  top: 3;
+  left: 0;
+  width: 28px;
+  height: 4px;
+  background-color: #9C27B0;
+  transform-origin: 100% 0;
+  transition: transform .3s ease-out;
+}
+.hamburger-icon__middle {
+  position: absolute;
+  top: 12;
+  left: 0;
+  width: 28px;
+  height: 4px;
+  background-color: #9C27B0;
+  transition: all .3s ease-out;
+  transform-origin: right;
+}
+.hamburger-icon:after {
+  content: "";
+  position: absolute;
+  bottom: 3;
+  left: 0;
+  width: 28px;
+  height: 4px;
+  background-color: #9C27B0;
+  transform-origin: 100% 100%;
+  transition: transform .3s ease-out;
+}
+
+.hamburger-icon__close-x:before {
+  transform: rotate(-45deg) scaleX(1); 
+}
+.hamburger-icon__close-x .hamburger-icon__middle {
+  opacity: 0;
+  transform: scaleX(0)
+}
+.hamburger-icon__close-x:after {
+  transform: rotate(45deg) scaleX(1);
 }
 
 .heading {
@@ -571,7 +617,7 @@ nav>ul>li:last-child {
     transform: scale(0.9)
   }
 }
-@media (max-width: 800px) {
+@media only screen and (max-width: 800px) and (min-width: 430px) {
   .header {
     padding: 0 1em;
   }
