--- a/style.css
+++ b/style.css
@@ -404,6 +404,9 @@ html {
   scroll-behavior: smooth;
 }
 
+.lock-scroll {
+  overflow: hidden;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -435,6 +438,10 @@ a {
   color: #9C27B0;
 }
 
+.white {
+  color: #fff;
+}
+
 .logo {
   float: left;
   width: 103px;
@@ -453,6 +460,7 @@ a {
   position: relative;
   width: 28px;
   height: 28px;
+  z-index: 10;
 }
 @media (min-width: 800px) {
   .hamburger-icon{display: none};
@@ -465,8 +473,14 @@ a {
   width: 28px;
   height: 4px;
   background-color: #9C27B0;
-  transform-origin: 100% 0;
+  -webkit-transform-origin: 100% 0;
+      -ms-transform-origin: 100% 0;
+          transform-origin: 100% 0;
+  -webkit-transition: -webkit-transform .3s ease-out;
+  transition: -webkit-transform .3s ease-out;
+  -o-transition: transform .3s ease-out;
   transition: transform .3s ease-out;
+  transition: transform .3s ease-out, -webkit-transform .3s ease-out;
 }
 .hamburger-icon__middle {
   position: absolute;
@@ -475,8 +489,12 @@ a {
   width: 28px;
   height: 4px;
   background-color: #9C27B0;
+  -webkit-transition: all .3s ease-out;
+  -o-transition: all .3s ease-out;
   transition: all .3s ease-out;
-  transform-origin: right;
+  -webkit-transform-origin: right;
+      -ms-transform-origin: right;
+          transform-origin: right;
 }
 .hamburger-icon:after {
   content: "";
@@ -486,20 +504,126 @@ a {
   width: 28px;
   height: 4px;
   background-color: #9C27B0;
-  transform-origin: 100% 100%;
-  transition: transform .3s ease-out;
+  -webkit-transform-origin: 100% 100%;
+      -ms-transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
+  -webkit-transition: all .3s ease-out;
+  -o-transition: all .3s ease-out;
+  transition: all .3s ease-out;
 }
 
 .hamburger-icon__close-x:before {
-  transform: rotate(-45deg) scaleX(1); 
+  -webkit-transform: rotate(-45deg) scaleX(1);
+      -ms-transform: rotate(-45deg) scaleX(1);
+          transform: rotate(-45deg) scaleX(1); 
+  background-color: #ff00ff;
 }
 .hamburger-icon__close-x .hamburger-icon__middle {
   opacity: 0;
-  transform: scaleX(0)
+  -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+          transform: scaleX(0);
+  /* background-color: #ff00ff; */
 }
 .hamburger-icon__close-x:after {
-  transform: rotate(45deg) scaleX(1);
+  -webkit-transform: rotate(45deg) scaleX(1);
+      -ms-transform: rotate(45deg) scaleX(1);
+          transform: rotate(45deg) scaleX(1);
+  background-color: #ff00ff;
 }
+
+.mobile-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform .3s ease-out;
+  transition: -webkit-transform .3s ease-out;
+  -o-transition: transform .3s ease-out;
+  transition: transform .3s ease-out;
+  transition: transform .3s ease-out, -webkit-transform .3s ease-out;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  width: 320px;
+  height: 100vh;
+  top: 0;
+  right: 0;
+  background: -webkit-gradient(linear, left top, right top, from(#ad5389), to(#3c1053));
+  background: -webkit-linear-gradient(left, #ad5389, #3c1053);
+  background: -o-linear-gradient(left, #ad5389, #3c1053);
+  background: linear-gradient(to right, #ad5389, #3c1053);
+  position: fixed;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+.mobile-menu--isActive {
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (min-width: 800px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 60px;
+  margin: 0;
+  padding-left: 60px;
+  font-size: 1.3em;
+  height: 100px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.mobile-menu__links li {
+  list-style: none;
+  color: #fff;
+}
+
+.mobile-menu__phone, .mobile-menu__email {
+  color: #ff00ff;
+}
+
+.mobile-menu__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 60px;
+  height: 150px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
 
 .heading {
   font-size: 1.5rem;
@@ -523,10 +647,12 @@ a {
   margin-bottom: 0;
 }
 
+
 .company__info {
   display: none;
   position: relative;
 }
+
 @media (min-width: 800px) {
   .company__info {
     display: block;
@@ -561,6 +687,12 @@ a {
   display: -ms-inline-flexbox;
   display: inline-flex;
   cursor: pointer;
+}
+
+.locationFinder__mobile {
+  margin-top: 18px;
+  -webkit-box-shadow: 0px 4px 2px 0px rgba(68, 34, 66, 0.25);
+          box-shadow: 0px 4px 2px 0px rgba(68, 34, 66, 0.25);
 }
 
 .locationFinder__text {
@@ -598,9 +730,9 @@ nav>ul>li {
   cursor: pointer;
 }
 
-nav>ul>li:last-child {
+/* nav>ul>li:last-child {
   margin-right: 0;
-}
+} */
 
 .locationFinder__text {
   display: inline;
@@ -614,7 +746,7 @@ nav>ul>li:last-child {
 }
 @media (max-width: 350px) {
   .header {
-    transform: scale(0.9)
+    padding: 0 5%;
   }
 }
 @media only screen and (max-width: 800px) and (min-width: 430px) {
@@ -624,6 +756,9 @@ nav>ul>li:last-child {
 }
 @media (min-width: 800px) {
   .header {
+    background: -webkit-gradient(linear, left top, right top, color-stop(19%, rgba(255,255,255,1)), to(rgba(249,238,251,1)));
+    background: -webkit-linear-gradient(left, rgba(255,255,255,1) 19%, rgba(249,238,251,1) 100%);
+    background: -o-linear-gradient(left, rgba(255,255,255,1) 19%, rgba(249,238,251,1) 100%);
     background: linear-gradient(90deg, rgba(255,255,255,1) 19%, rgba(249,238,251,1) 100%);
   }
 }
@@ -639,11 +774,6 @@ nav>ul>li:last-child {
   display: block;
   margin-top: 3.75rem;
   margin-bottom: 3.375rem;
-}
-@media (max-width: 350px) {
-  .hero {
-    transform: scale(0.9)
-  }
 }
 @media (min-width: 800px) {
   .hero {
@@ -672,6 +802,12 @@ nav>ul>li:last-child {
 .hero_text__paragraph {
   width: 20.4375rem;
 }
+@media (max-width: 350px) {
+  .hero_text__paragraph {
+    width: 300px;
+  }
+}
+
 @media (min-width: 800px) {
   .hero_text__paragraph {
     font-size: 1.125rem;
@@ -735,11 +871,18 @@ nav>ul>li:last-child {
 .hero__image {
   border-radius: 5px;
 }
+
 @media (max-width: 800px) {
   .hero__image {
     width: 20.375rem;
     height: auto;
     margin-right: auto;
+  }
+}
+@media (max-width: 350px) {
+  .hero__image {
+    width: 300px;
+    height: auto;
   }
 }
 @media (min-width: 800px) {
@@ -748,12 +891,6 @@ nav>ul>li:last-child {
   }
 }
 
-/* @media (min-width: 800px) {
-  .hero__image {
-    width: 600px;
-    height: auto;
-  }
-} */
 
 .about {
   background-color: #f9eefb;
@@ -761,9 +898,9 @@ nav>ul>li:last-child {
   margin-bottom: 6rem;
 }
 @media (max-width: 350px) {
-  .about {
+  /* .about {
     transform: scale(0.9)
-  }
+  } */
 }
 
 .about__heading {
@@ -786,6 +923,11 @@ nav>ul>li:last-child {
 .about__paragraph {
   font-size: 1.125rem;
   max-width: 20.4rem;
+}
+@media (max-width: 350px) {
+  .about__paragraph {
+    max-width: 300px;
+  }
 }
 @media (min-width: 670px) {
   .about__paragraph {
@@ -849,9 +991,9 @@ nav>ul>li:last-child {
   padding-top: 3rem;
 }
 @media (max-width: 350px) {
-  .services__container {
+  /* .services__container {
     transform: scale(0.9)
-  }
+  } */
 }
 
 @media (min-width: 800px) {
@@ -901,11 +1043,6 @@ nav>ul>li:last-child {
   margin-bottom: 5rem;
   margin-bottom: 5rem;
 }
-@media (max-width: 350px) {
-  .testimonials {
-    transform: scale(0.9)
-  }
-}
 
 @media (min-width: 800px) {
   .testimonials__heading {
@@ -921,10 +1058,11 @@ nav>ul>li:last-child {
 
 .testimonial {
   padding-left: 10px;
-  border-left: 3px solid #94cbfb;
   position: relative;
   padding-top: 1.875rem;
   margin-top: 1.25rem;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 370px;
   margin-bottom: 3rem;
 }
@@ -939,6 +1077,8 @@ nav>ul>li:last-child {
 .testimonial__paragraph {
   margin-top: 10px;
   text-align: left;
+  padding-left: 5px;
+  border-left: 3px solid #94cbfb;
 }
 
 .testimonial__author {
@@ -953,9 +1093,9 @@ nav>ul>li:last-child {
   margin-bottom: 4rem;
 }
 @media (max-width: 350px) {
-  .forms {
+  /* .forms {
     transform: scale(0.9)
-  }
+  } */
 }
 
 .form__heading {
